# Transpiler

./: .clangd  CMakeLists.txt  README.md  code.txt  grammer.md  main  main.cpp  please.cpp  todo.md
.cache/clangd/index/: ast.cpp.5174E44D4542E3CA.idx  ast.cpp.58DF2B18753913F0.idx  ast.cpp.5F72BAD3B95EA225.idx  ast.cpp.A4BAE0965DE9A8F6.idx  ast.h.0C804935918BF1BE.idx  ast.h.0E7B6CCB6D2A8739.idx  ast.h.8999E72B5BA3013B.idx  ast.h.B80CDBA48C676AED.idx  codeGenerator.cpp.E670FA3BB507B2C7.idx  codeGenerator.h.B8F2CF258F65A8D8.idx  lexer.cpp.1D69F2768613ADDF.idx  lexer.cpp.4D76F934F08A5DE2.idx  lexer.cpp.523EEE31FB6C2845.idx  lexer.cpp.F0850AB30F1B4F0F.idx  lexer.h.5A6479EB1FB1F7AB.idx  lexer.h.C29B0F6ED6FA8A74.idx  lexer.h.C5118CD61C42EBD2.idx  lexer.h.EB182671CB80F002.idx  main.cpp.1B41D40929677F2C.idx  main.cpp.92C5869E0664CFC0.idx  main.cpp.CD2DBD8DA5DE2C73.idx  main.cpp.EC57A241EAB21B21.idx  node.cpp.4CDB0C9DCA7B7887.idx  node.cpp.CDBB9949CC1A44C4.idx  node.cpp.CF0B84ADE4144024.idx  node.cpp.F8CD868038ACDF73.idx  node.h.15D43992618D75C7.idx  node.h.A61480BE39067EA4.idx  node.h.C2F80689D4AAC7FC.idx  node.h.C864805F3F036D78.idx  token.cpp.053AC73393DAEBCF.idx  token.cpp.378D29B0DD2281B1.idx  token.cpp.70269E614C2FE697.idx  token.cpp.D2D65E7EE0E5391D.idx  token.h.837407B0A92CFA40.idx  token.h.86E4ACF3DE67FFB3.idx  token.h.F92399D5BFBCDDF4.idx  (+9 more)
.zed/: settings.json  tasks.json
include/: codeGenerator.h  lexer.h  token.h  utils.h
include/ast/: ast.h  node.h
src/: codeGenerator.cpp  lexer.cpp  token.cpp  utils.cpp
src/ast/: ast.cpp  node.cpp
